cabal-version:      2.4
name:               salmon
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Salmon.Op.Graph
                   , Salmon.Op.OpGraph
                   , Salmon.Op.Actions
                   , Salmon.Op.Eval
                   , Salmon.Op.Track
                   , Salmon.Op.Ref
                   , Salmon.FoldBranch
                   , Salmon.Actions.Help
                   , Salmon.Actions.UpDown
                   , Salmon.Actions.Check
                   , Salmon.Actions.Dot
                   , Salmon.Actions.Notify
                   , Salmon.Builtin.Extension
                   , Salmon.Builtin.Nodes.Certificates
                   , Salmon.Builtin.Nodes.Demo
                   , Salmon.Builtin.Nodes.Keys
                   , Salmon.Builtin.Nodes.Binary
                   , Salmon.Builtin.Nodes.Filesystem
                   , Salmon.Builtin.Nodes.Git
                   , Salmon.Builtin.Nodes.Debian.Package
                   , Salmon.Builtin.Nodes.Debian.OS
    build-depends:    base ^>=4.16.3.0
                    , containers
                    , free
                    , mtl
                    , transformers
                    , contravariant
                    , hashable
                    , text
                    , bytestring
                    , directory
                    , filepath
                    , process-extras
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables

executable salmon-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , salmon
                    , mtl
                    , free
                    , lens
                    , contravariant
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
