cabal-version:      2.4
name:               salmon
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Salmon.Op.Graph
                   , Salmon.Op.OpGraph
                   , Salmon.Op.Actions
                   , Salmon.Op.Eval
                   , Salmon.Op.Track
                   , Salmon.Op.Configure
                   , Salmon.Op.Ref
                   , Salmon.FoldBranch
                   , Salmon.Actions.Help
                   , Salmon.Actions.UpDown
                   , Salmon.Actions.Check
                   , Salmon.Actions.Dot
                   , Salmon.Actions.Notify
                   , Salmon.Builtin.Extension
                   , Salmon.Builtin.CommandLine
                   , Salmon.Builtin.Nodes.Acme
                   , Salmon.Builtin.Nodes.Bash
                   , Salmon.Builtin.Nodes.Binary
                   , Salmon.Builtin.Nodes.Cabal
                   , Salmon.Builtin.Nodes.Certificates
                   , Salmon.Builtin.Nodes.Continuation
                   , Salmon.Builtin.Nodes.Debian.Package
                   , Salmon.Builtin.Nodes.Debian.OS
                   , Salmon.Builtin.Nodes.Demo
                   , Salmon.Builtin.Nodes.Filesystem
                   , Salmon.Builtin.Nodes.Git
                   , Salmon.Builtin.Nodes.Keys
                   , Salmon.Builtin.Nodes.Rsync
                   , Salmon.Builtin.Nodes.Self
                   , Salmon.Builtin.Nodes.Secrets
                   , Salmon.Builtin.Nodes.Ssh
                   , Salmon.Builtin.Nodes.Systemd
                   , Salmon.Builtin.Nodes.Web
                   , SreBox.CabalBuilding
                   , SreBox.CertSigning
                   , SreBox.Environment
                   , SreBox.MicroDNS
                   , SreBox.KitchenSinkBlog
    build-depends:    base ^>=4.16.3.0
                    , containers
                    , free
                    , mtl
                    , transformers
                    , comonad
                    , contravariant
                    , hashable
                    , text
                    , bytestring
                    , directory
                    , filepath
                    , process-extras
                    , aeson
                    , optparse-generic
                    , optparse-applicative
                    , acme-not-a-joke
                    , jose
                    , http-client-tls
                    , http-client
                    , unix
                    , crypton-x509
                    , crypton-x509-store
                    , crypton-x509-validation
                    , crypton-connection
                    , tls
                    , base16-bytestring
                    , cryptohash-sha256
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables

executable salmon-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , salmon
                    , mtl
                    , free
                    , lens
                    , contravariant
                    , text
                    , optparse-applicative
                    , optparse-generic
                    , aeson
                    , bytestring
                    , acme-not-a-joke
                    , http-client
                    , http-client-tls
                    , filepath
    hs-source-dirs:   app
    default-language: Haskell2010

executable srebox-salmon
    main-is:          SreBox.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , salmon
                    , mtl
                    , free
                    , lens
                    , contravariant
                    , text
                    , optparse-applicative
                    , optparse-generic
                    , aeson
                    , bytestring
                    , acme-not-a-joke
                    , http-client
                    , http-client-tls
                    , filepath
                    , crypton-x509
                    , crypton-x509-store
                    , crypton-x509-validation
                    , crypton-connection
                    , tls
                    , base16-bytestring
                    , cryptohash-sha256
    hs-source-dirs:   app
    default-language: Haskell2010
