cabal-version:      2.4
name:               salmon-apps
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A set of utilities built with Salmon at their core.

-- A longer description of the package.
description: Tools useful for operating systems, and which benefit from specialized implementations configured via external files.

-- A URL where users can report bugs.
bug-reports: https://github.com/lucasdicioccio/salmon/issues

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
                    Migrator
                    Bootstrap
    other-modules:
                    Migrator.Ops
                    Migrator.Seed
                    Migrator.Spec
                    Bootstrap.Ops
                    Bootstrap.Seed
                    Bootstrap.Spec

    build-depends:    base >=4.16.3.0
                    , aeson
                    , bytestring
                    , filepath
                    , optparse-applicative
                    , optparse-generic
                    , salmon-core
                    , salmon-ops
                    , salmon-ops-recipes
                    , text
    ghc-options:   -Wall
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables

executable salmon-migrator
    main-is:          MigratorApp.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , salmon-apps
    hs-source-dirs:   app
    default-language: Haskell2010

executable salmon-bootstrap
    main-is:          BootstrapApp.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16.3.0
                    , salmon-apps
    hs-source-dirs:   app
    default-language: Haskell2010
