cabal-version:      2.4
name:               salmon-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Salmon.Op.Graph
                   , Salmon.Op.OpGraph
                   , Salmon.Op.Actions
                   , Salmon.Op.Eval
                   , Salmon.Op.Track
                   , Salmon.Op.Configure
                   , Salmon.Op.Ref
                   , Salmon.Op.G
                   , Salmon.FoldBranch
    build-depends:    base >=4.16.3.0
                    , aeson
                    , comonad
                    , containers
                    , contravariant
                    , free
                    , hashable
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables
