cabal-version:      2.4
name:               salmon-ops-recipes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: SreBox.GeneratedSite
                   , SreBox.PostgresMigrations
                   , SreBox.CabalBuilding
                   , SreBox.CertSigning
                   , SreBox.Environment
                   , SreBox.Initialize
                   , SreBox.DNSRegistration
                   , SreBox.MicroDNS
                   , SreBox.KitchenSinkBlog
                   , SreBox.KitchenSinkMultiSites
                   , SreBox.PostgresInit
                   , SreBox.Postgrest
    build-depends:    base >=4.16.3.0
                    , acme-not-a-joke
                    , aeson
                    , base16-bytestring
                    , base64-bytestring
                    , bytestring
                    , case-insensitive
                    , comonad
                    , containers
                    , contravariant
                    , cryptohash-sha256
                    , crypton-connection
                    , crypton-x509
                    , crypton-x509-store
                    , crypton-x509-validation
                    , directory
                    , filepath
                    , free
                    , hashable
                    , http-client
                    , http-client-tls
                    , jose
                    , kitchen-sink
                    , mtl
                    , optparse-applicative
                    , optparse-generic
                    , process
                    , process-extras
                    , salmon-core
                    , salmon-ops
                    , text
                    , tls
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables
