cabal-version:      2.4
name:               salmon-ops-recipes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: SreBox.PostgresMigrations
                   , SreBox.CabalBuilding
                   , SreBox.Environment
                   , SreBox.Initialize
                   , SreBox.DNSRegistration
                   , SreBox.MicroDNS
                   , SreBox.PostgresInit
                   , SreBox.Postgrest
                   , SreBox.JWTSigning
                   , SreBox.WireGuardVpn
    build-depends:    base >=4.16.3.0
                    , aeson
                    , base16-bytestring
                    , base64-bytestring
                    , bytestring
                    , case-insensitive
                    , comonad
                    , containers
                    , contravariant
                    , cryptohash-sha256
                    , crypton-connection
                    , crypton-x509
                    , crypton-x509-store
                    , crypton-x509-validation
                    , directory
                    , filepath
                    , free
                    , hashable
                    , http-client
                    , http-client-tls
                    , jose
                    , jose-jwt
                    , mtl
                    , optparse-applicative
                    , optparse-generic
                    , process
                    , process-extras
                    , salmon-core
                    , salmon-ops
                    , text
                    , tls
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables

test-suite salmon-ops-recipes-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:    Test.Harness
                    , Test.JWTSigningSpec
                    , Test.PodmanSpec
                    , Test.PostgresInitSpec
    build-depends:    base
                    , aeson
                    , bytestring
                    , comonad
                    , containers
                    , contravariant
                    , directory
                    , filepath
                    , free
                    , mtl
                    , process
                    , process-extras
                    , salmon-core
                    , salmon-ops
                    , salmon-ops-recipes
                    , tasty
                    , tasty-hunit
                    , temporary
                    , text
    default-language: Haskell2010
    default-extensions: DataKinds
                      , KindSignatures
                      , OverloadedStrings
                      , OverloadedRecordDot
                      , ScopedTypeVariables
                      , TypeApplications
