cabal-version:      2.4
name:               salmon-ops
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Salmon.Actions.Help
                   , Salmon.Actions.UpDown
                   , Salmon.Actions.Check
                   , Salmon.Actions.Dot
                   , Salmon.Actions.Notify
                   , Salmon.Builtin.Extension
                   , Salmon.Builtin.CommandLine
                   , Salmon.Builtin.Helpers
                   , Salmon.Builtin.Migrations
                   , Salmon.Builtin.Nodes.Acme
                   , Salmon.Builtin.Nodes.Bash
                   , Salmon.Builtin.Nodes.Binary
                   , Salmon.Builtin.Nodes.Cabal
                   , Salmon.Builtin.Nodes.Certificates
                   , Salmon.Builtin.Nodes.Continuation
                   , Salmon.Builtin.Nodes.CronTask
                   , Salmon.Builtin.Nodes.Debian.Debootstrap
                   , Salmon.Builtin.Nodes.Debian.Package
                   , Salmon.Builtin.Nodes.Debian.OS
                   , Salmon.Builtin.Nodes.Demo
                   , Salmon.Builtin.Nodes.Filesystem
                   , Salmon.Builtin.Nodes.Git
                   , Salmon.Builtin.Nodes.User
                   , Salmon.Builtin.Nodes.Keys
                   , Salmon.Builtin.Nodes.Netfilter
                   , Salmon.Builtin.Nodes.Npm
                   , Salmon.Builtin.Nodes.Postgres
                   , Salmon.Builtin.Nodes.Rsync
                   , Salmon.Builtin.Nodes.Routes
                   , Salmon.Builtin.Nodes.Self
                   , Salmon.Builtin.Nodes.Secrets
                   , Salmon.Builtin.Nodes.Spago
                   , Salmon.Builtin.Nodes.Ssh
                   , Salmon.Builtin.Nodes.Systemd
                   , Salmon.Builtin.Nodes.Tar
                   , Salmon.Builtin.Nodes.Upx
                   , Salmon.Builtin.Nodes.Web
                   , Salmon.Builtin.Nodes.WireGuard
                   , Salmon.Op.Configure
                   , Salmon.Op.Ref
                   , Salmon.Reporter
    build-depends:    base >=4.16.3.0
                    , acme-not-a-joke
                    , aeson
                    , bytestring
                    , containers
                    , contravariant
                    , directory
                    , filepath
                    , free
                    , hashable
                    , http-client
                    , http-client-tls
                    , jose
                    , mtl
                    , optparse-applicative
                    , optparse-generic
                    , process
                    , process-extras
                    , salmon-core
                    , text
                    , unix
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: KindSignatures
                      , DataKinds
                      , OverloadedStrings
                      , DeriveFunctor
                      , OverloadedRecordDot
                      , TypeApplications
                      , ScopedTypeVariables
